--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap");
 
 @layer base {
   :root {
@@ -77,7 +77,7 @@
 }
 
 .bg-hero {
-  background-image: url('../public/images/hero.jpg');
+  background-image: url("../public/images/hero.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 50vh;
@@ -85,6 +85,46 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-.typewriter-font{
-  font-family: 'Roboto Mono', monospace;
+.typewriter-font {
+  font-family: "Roboto Mono", monospace;
+}
+
+.hover-underline-animation {
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  vertical-align: bottom;
+}
+
+.hover-underline-animation::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform: scaleX(0);
+  transform-origin: bottom left;
+  transition: transform 0.3s ease;
+}
+
+.hover-underline-animation:hover::before {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.animate-slide-in {
+  animation: slideInFromLeft 0.7s ease-in forwards;
 }
